tests/miniJava/neg/006790_mutation.MiniJava
class java int [] java ; { public static void Main ( String [ ] java ) { { } } }
